tests/expected_invalid_parse_missing_variant_comma.diag.out
<input>:4:5: error: expected ',' between variants
        Failure,
        ^^^^^^^
